# agent-harness

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
adapters/codex/: README.md  assert_exec_spawn_proof.py  assert_prompt_input_agents.py  backup-manifest.example.json  config.toml  install-scope.md  install.sh  symlink-manifest.example.json
adapters/github-copilot/: README.md  install.sh
agent_harness/: __init__.py  cli.py  governance.py  waves.py
agents/: roles.md
docs-ai/current-work/: closed-harness-audits-2026-04.md  closed-harness-audits-2026-05.md  delivery-map.md  domain-language-audit-2026-04-27.md  harness-runtime-proof-design-refactor.md  openai-metadata-audit-2026-04-27.md  runtime-evidence-guard-policy-plan.md  skill-description-audit-2026-04-28.md  skill-ownership-audit-2026-04-27.md  wave-b-compaction-dispositions-2026-04-27.md  workflow-feedback-skill-handoff-2026-04-28.md
plans/: harness-hardening-wave-a-2026-04-27.md  harness-hardening-wave-b-2026-04-27.md  skill-simplification-audit-2026-04-27.md
prompts/: repo-radar.md
scripts/: codex_install_smoke.py  codex_live_install_check.py  eval_design_antipattern_fixture.py  eval_design_context_fixture.py  eval_design_judge_fixture.py  validate_harness.py
skills/adversarial-review/: SKILL.md
skills/code-review/: SKILL.md
skills/code-simplicity/: SKILL.md
skills/design-integrity/: SKILL.md
tests/: test_agent_harness_cli.py  test_codex_install_smoke.py  test_design_antipattern_contract.py  test_design_context_contract.py  test_design_judge_eval.py  test_validate_harness.py
(+249 files in other folders)
